--- a/websocket.html
+++ b/websocket.html
@@ -29,7 +29,7 @@
               var socket;
 
               status.textContent = "Not Connected";
-              url.value = "ws://vm3:8080";
+              url.value = "ws://BuildoopHUE:8080";
               close.disabled = true;
               send.disabled = true;
 
@@ -90,7 +90,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
+            <li><a href="index.html">Dashboard</a></li>
             <li><a href="#">Settings</a></li>
             <li><a href="#">Profile</a></li>
             <li><a href="#">Help</a></li>
@@ -104,6 +104,7 @@
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
             <li><a href="index.html">Index</a></li>
+            <li><a href="demo1.html">Demo1</a></li>
             <li><a href="websocket.html">Test WebSocket Server</a></li>
           </ul>
         </div>
